# Solstice

./: .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  a.py
SDK/LibFileWatch/: CMakeLists.txt  FileWatcher.cxx
SDK/LibNativeLoad/: CMakeLists.txt  DynamicLibrary.cxx
SDK/LibParallax/: CMakeLists.txt
SDK/LibSettingsStore/: CMakeLists.txt  SettingsStore.cxx
SDK/LibSmf/: CMakeLists.txt
example/Avalanche/: CMakeLists.txt  Main.cxx
example/Blizzard/: BlizzardGame.cxx  BlizzardGame.hxx  CMakeLists.txt  Main.cxx
example/Disco/: BassDrop.hxx  CMakeLists.txt  DiscoGame.hxx  Main.cxx
example/Hyperbourne/: Archon.cxx  Archon.hxx  CMakeLists.txt  HyperbourneGame.cxx  HyperbourneGame.hxx  Main.cxx
example/MotionFusion/: CMakeLists.txt  Main.cxx  MotionFusionGame.cxx  MotionFusionGame.hxx
example/PhysicsPlayground/: CMakeLists.txt  Main.cxx  ObjectSpawner.cxx  ObjectSpawner.hxx  PhysicsPlayground.cxx  PhysicsPlayground.hxx  SelectionSystem.cxx  SelectionSystem.hxx  TerminalHub.cxx  TerminalHub.hxx  Test.cxx  UIManager.cxx  UIManager.hxx
example/ThermalPlume/: CMakeLists.txt  ExhaustParticleSystem.cxx  ExhaustParticleSystem.hxx  Main.cxx  README.md  ThermalPlumeGame.cxx  ThermalPlumeGame.hxx
source/: CMakeLists.txt  Init.cxx  Solstice.hxx  SolsticeExport.hxx
source/Arzachel/: AnimationClip.cxx  AnimationClip.hxx  AnimationOps.cxx  AnimationOps.hxx  AnimationTrack.cxx  AnimationTrack.hxx  AssetBuilder.cxx  AssetBuilder.hxx  AssetPresets.cxx  AssetPresets.hxx  CMakeLists.txt  CharacterPrimitives.cxx  CharacterPrimitives.hxx  Constraints.cxx  Constraints.hxx  FacialAnimation.cxx  FacialAnimation.hxx  GLTFExport.cxx  GLTFExport.hxx  GLTFImport.cxx  GLTFImport.hxx  Generator.cxx  Generator.hxx  GeometryOps.cxx  GeometryOps.hxx  Keyframe.cxx  Keyframe.hxx  MapSerializer.cxx  MapSerializer.hxx  MaterialPresets.cxx  MaterialPresets.hxx  MaterialSerializer.cxx  MaterialSerializer.hxx  MeshData.cxx  MeshData.hxx  MeshFactory.cxx  MeshFactory.hxx  Polyhedra.cxx  Polyhedra.hxx  ProceduralTexture.cxx  (+19 more)
source/Asset/: CMakeLists.txt
source/Core/: Allocator.hxx  AssetLoader.cxx  AssetLoader.hxx  AssetStream.hxx  Async.hxx  Audio.cxx  Audio.hxx  AuthoringSkyboxBus.cxx  AuthoringSkyboxBus.hxx  BSP.hxx  Base64.cxx  Base64.hxx  CMakeLists.txt  CNN.hxx  Cache.cxx  Cache.hxx  Debug.cxx  Debug.hxx  FSM.hxx  JSON.cxx  JSON.hxx  LZ4.cxx  LZ4.hxx  MLP.hxx  Material.cxx  Material.hxx  Mmap.cxx  Mmap.hxx  NavMesh.cxx  NavMesh.hxx  Octree.hxx  Profiler.cxx  Profiler.hxx  SIMD.hxx  Save.cxx  Save.hxx  ScopeTimer.cxx  ScopeTimer.hxx  WavefrontParser.cxx  WavefrontParser.hxx
source/Entity/: CMakeLists.txt  ComponentStorage.hxx  CurrentPlayer.hxx  EntityId.hxx  IEntity.hxx  Kind.hxx  Name.hxx  NetworkMultiplayer.hxx  PlayerFactory.hxx  PlayerTag.hxx  Registry.hxx  Scheduler.cxx  Scheduler.hxx  System.hxx  Transform.hxx
source/Game/: AIBrain.cxx  AIBrain.hxx  Autosave.cxx  Autosave.hxx  Boss.cxx  Boss.hxx  CMakeLists.txt  ComponentFactory.cxx  ComponentFactory.hxx  DialoguePresenter.cxx  DialoguePresenter.hxx  DialogueTree.cxx  DialogueTree.hxx  Difficulty.cxx  Difficulty.hxx  Enemy.cxx  Enemy.hxx  FPSGame.cxx  FPSGame.hxx  FPSMovement.cxx  FPSMovement.hxx  FPSSandbox.cxx  FPSSandbox.hxx  FirstPersonController.cxx  FirstPersonController.hxx  GameBase.cxx  GameBase.hxx  GamePreferences.cxx  GamePreferences.hxx  GameState.cxx  GameState.hxx  HUD.cxx  HUD.hxx  HUDPresets.cxx  HUDPresets.hxx  Health.cxx  Health.hxx  InputManager.cxx  InputManager.hxx  Inventory.cxx  (+44 more)
source/Material/: CMakeLists.txt  Material.cxx  SmatBinary.cxx  SmatBinary.hxx  SmatTypes.hxx
source/Math/: CMakeLists.txt  Matrix.hxx  Quaternion.cxx  Quaternion.hxx  SIMDVec3.hxx  Vector.hxx
source/MinGfx/: CMakeLists.txt  EasingFunction.cxx  EasingFunction.hxx  Keyframe.hxx
source/Multimedia/: CMakeLists.txt  FfmpegVideoDecoder.cxx  FfmpegVideoDecoder.hxx
source/Networking/: CMakeLists.txt  NetworkingSystem.cxx  NetworkingSystem.hxx  Packet.hxx  Socket.cxx  Socket.hxx
source/Physics/: BVH.hxx  CCD.cxx  CCD.hxx  CMakeLists.txt  CollisionResolution.cxx  CollisionResolution.hxx  ContactClustering.cxx  ContactClustering.hxx  ContactGeneration.cxx  ContactGeneration.hxx  ConvexHull.hxx  ConvexHullFactory.cxx  ConvexHullFactory.hxx  Fluid.cxx  Fluid.hxx  FluidFFT.hxx  FluidSparse.cxx  FluidSparse.hxx  GJK.cxx  GJK.hxx  IterativeSolver.cxx  IterativeSolver.hxx  LightSource.cxx  LightSource.hxx  ManifoldManager.cxx  ManifoldManager.hxx  NSSolver.cxx  NSSolver.hxx  PhysicsSystem.cxx  PhysicsSystem.hxx  ReactPhysics3DBridge.cxx  ReactPhysics3DBridge.hxx  RigidBody.hxx  ShapeHelpers.cxx  ShapeHelpers.hxx
source/Plugin/: CMakeLists.txt  DynamicLibrary.cxx  DynamicLibrary.hxx  Plugin.cxx  Plugin.hxx  PluginManager.cxx  PluginManager.hxx  PluginMessageBus.cxx  PluginMessageBus.hxx  SubsystemHooks.cxx  SubsystemHooks.hxx
source/Render/: AssetLoader.cxx  AssetLoader.hxx  CMakeLists.txt  Camera.cxx  Camera.hxx  Context.cxx  Context.hxx  FluidVolumeVisualizer.cxx  FluidVolumeVisualizer.hxx  Framebuffer.cxx  (+41 more)
tests/: AssetPipelineTest.cxx  AuthoringSkyboxBusTest.cxx  CAPISmokeTest.cxx  CMakeLists.txt  ECSRegistryTest.cxx  ECSStressTest.cxx  EngineLifecycleTest.cxx  FacialAnimationTest.cxx  Fuzz.hxx  GpuSmokeTest.cxx  JobSystemStressTest.cxx  MathSafetyTest.cxx  MoonwalkInteropTest.cxx  MultimediaFfmpegTest.cxx  NSSolverTest.cxx  NarrativeDocumentTest.cxx  NetworkingStressTest.cxx  NetworkingTest.cxx  ParallaxFormatTest.cxx  ParserFuzzTest.cxx  PhysicsStressTest.cxx  ProfilerTest.cxx  README.md  RelicFormatTest.cxx  ScriptStressTest.cxx  SmatFormatTest.cxx  SmfFormatTest.cxx  TestHarness.hxx  ThreadSafetyTest.cxx
tools/: CMakeLists.txt  JhSmfProjectGen.cxx  apply_clang_tidy.sh  build_linux.sh  build_macos.sh  check_naming.sh  compile_shaders.py  fetch_ffmpeg.py  fetch_ffmpeg_libav.py  fntbe.py  format_includes.sh  nuke.py  package_executables.py  scorch.py  setup_env_linux.sh  setup_env_macos.sh  solstice_unix_build_env.sh  test_package_executables.py
(+684 files in other folders)
